<resources>
    <string name="app_name">MovieApp</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>


    <!-- Strings for Preference -->
    <string name="pref_sort_key">pref_sort_key</string>
    <string name="pref_sort_title">Sort Criteria</string>
    <string name="pref_sort_summary">Select your sort criteria</string>
    <string name="pref_sort_default">Most popular</string>


    <string name="most_popular">Most popular</string>
    <string name="highest_rated">Highest rated</string>
    <string name="favorites">Favorites</string>


    <string name="title">Title</string>
    <string name="release_date">Release date</string>
    <string name="synopsis">Synopsis</string>
    <string name="rating">Rating</string>
    <string name="rating_total">10</string>

    <string name="movie_details">Movie details</string>
    <string name="movies">Movies</string>
    <string name="movie_poster">Movie poster</string>
    <string name="check_internet_message">Please check your internet connection</string>
    <string name="trailers">Trailers</string>
    <string name="reviews">Reviews</string>

</resources>
