<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <TextView
        android:id="@+id/movie_details_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_green_dark"
        android:padding="20dp"
        android:text="@string/title"
        android:textColor="@android:color/white"
        android:textSize="@dimen/textview_title_size" />


    <RelativeLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingTop="@dimen/activity_vertical_margin">


        <ImageView
            android:id="@+id/movie_details_image_poster"
            android:layout_width="@dimen/poster_width"
            android:layout_height="@dimen/poster_height"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:contentDescription="@string/movie_poster"
            android:src="@mipmap/ic_launcher" />


        <TextView
            android:id="@+id/movie_details_release_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/view_left_margin"
            android:layout_marginStart="@dimen/view_left_margin"
            android:layout_toEndOf="@+id/movie_details_image_poster"
            android:layout_toRightOf="@+id/movie_details_image_poster"
            android:text="@string/release_date" />


        <TextView
            android:id="@+id/movie_details_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/movie_details_release_date"
            android:layout_alignStart="@+id/movie_details_release_date"
            android:layout_below="@+id/movie_details_release_date"
            android:text="@string/rating" />

        <ImageButton
            android:id="@+id/favorite_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/movie_details_rating"
            android:layout_alignStart="@+id/movie_details_rating"
            android:layout_below="@+id/movie_details_rating"
            android:background="#00ffffff"
            android:contentDescription="@string/favorites"
            android:src="@android:drawable/btn_star" />

        <TextView
            android:id="@+id/movie_details_plot_synopsis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/movie_details_image_poster"
            android:text="@string/synopsis" />

    </RelativeLayout>


</LinearLayout>
